# vmtest-action

./: .eslintrc.json  Cargo.toml  Dockerfile  README.md  action.yml  index.js  index.test.js  package-lock.json  package.json  vmtest.js
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
